--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,16 +143,14 @@ section {
 }
 /* Hero Style End*/
 
-.intro {
-    text-align: center;
-}
 
 .section-title {
+    padding-bottom: 20x;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
     border-bottom: 3px solid;
 }
 
@@ -165,6 +163,7 @@ section {
 }
 
 .intro p {
+    text-align: center;
     line-height: 1.7;
     color: #39a6b2;
     width: 80%;
@@ -173,7 +172,6 @@ section {
 }
 
 .steps {
-    text-align: center;
     background: #fce138;
 }
 
@@ -196,7 +194,6 @@ section {
 }
 
 .trainers {
-    text-align: center;
 }
 
 .trainer {
@@ -244,7 +241,6 @@ section {
 
 /* REACH OUT STYLES START */
 .contact {
-    text-align: center;
     background: #024e76;
 }
 
@@ -283,3 +279,7 @@ section {
 }
 
 /* REACH OUT STYLES END */
+
+.flex-row {
+    display: flex;
+}
