--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,6 @@
 }
 
 body {
-  /* more on this crazy alphanumerical value in a minute! */
   color: #39a6b2;
   font-family: Helvetica, Arial, sans-serif;
 }
@@ -171,26 +170,56 @@ section {
     margin: 0 auto;
 }
 
+.step {
+    margin: 50px auto;
+    padding-bottom: 50px;
+    width: 80%;
+    border-bottom: 1px solid #39a6b2;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.step-text p {
+    color:#39a6b2;
+    font-size: 18px;
+}
+
 .steps {
     background: #fce138;
 }
 
-.steps div {
-    margin-bottom: 80px;
-}
-
-.steps img {
-    width:15%;
-    margin: 10px 0;
-}
-
-.steps h3 {
+.step h3 {
+    flex: 1 30%;
     color: #024e76;
     font-size: 46px;
 }
 
-.steps span {
-    font-size: 38px;
+.step-text h4 {
+    font-size: 26px;
+    line-height: 1.5;
+    color: #024e76;
+}
+
+.step-info { 
+    flex: 2 70%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+.step-img {
+    flex: 1 12%;
+    margin-right: 20px;
+}
+
+.step-text {
+    flex: 12;
+}
+
+.step-img img {
+max-width: 100%;
 }
 
 .trainers {
